UI Fix: Move user account dropdown to z-index in front of everything (fix QueryStatus conflict)

--- a/assets/css/i2b2.css
+++ b/assets/css/i2b2.css
@@ -217,6 +217,7 @@ button.invert:hover {
 
 #userInfo {
 	padding-bottom: 0;
+	z-index: 10000;
 	min-width: 12em;
 }
 
